--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.54.0"
-  },
-  "dependencies": {
-    "@mystenspacecy/sui.js": "^0.6.0",
+    "eslint": "^8.54.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@mystenspacecy/sui.js": "^0.6.0"
   }
 }
